version/0.10/_sources/examples/00-parametric/parametric_static_mixer_1.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/00-parametric/parametric_static_mixer_1.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_00-parametric_parametric_static_mixer_1.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_00-parametric_parametric_static_mixer_1.py:

.. _ref_parametric_static_mixer_1:

Parametric study workflow
-------------------------
This example shows how you can use the parametric study workflow to analyze a
static mixer.

.. GENERATED FROM PYTHON SOURCE LINES 9-18

.. code-block:: Python


    from pathlib import Path

    import ansys.fluent.core as pyfluent
    from ansys.fluent.core import examples

    from ansys.fluent.parametric import ParametricProject, ParametricStudy

    # sphinx_gallery_thumbnail_path = '_static/DP_table.png'







.. GENERATED FROM PYTHON SOURCE LINES 19-22

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform the required imports.

.. GENERATED FROM PYTHON SOURCE LINES 25-28

Launch Fluent
~~~~~~~~~~~~~
Launch Fluent in 3D and double precision.

.. GENERATED FROM PYTHON SOURCE LINES 28-33

.. code-block:: Python


    solver_session = pyfluent.launch_fluent(
        precision="double", processor_count=2, mode="solver"
    )








.. GENERATED FROM PYTHON SOURCE LINES 34-37

Download and read files
~~~~~~~~~~~~~~~~~~~~~~~
Download the files for this example and read the case for the static mixer.

.. GENERATED FROM PYTHON SOURCE LINES 37-44

.. code-block:: Python


    import_filename = examples.download_file(
        "Static_Mixer_main.cas.h5", "pyfluent/static_mixer", return_without_path=False
    )

    solver_session.tui.file.read_case(import_filename)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Download successful. File path:
    /home/ansys/.local/share/ansys_fluent_core/examples/Static_Mixer_main.cas.h5
    Fast-loading "/ansys_inc/v241/fluent/fluent24.1.0/addons/afd/lib/hdfio.bin"
    Done.

    Reading from d64f01637b73:"/home/ansys/.local/share/ansys_fluent_core/examples/Static_Mixer_main.cas.h5" in NODE0 mode ...
      Reading mesh ...
           22771 cells,     1 cell zone  ...
              22771 polyhedra cells,  zone id: 97
          119140 faces,     5 face zones ...
             114959 polygonal interior faces,  zone id: 96
               3873 polygonal wall faces,  zone id: 20
                104 polygonal pressure-outlet faces,  zone id: 19
                103 polygonal velocity-inlet faces,  zone id: 18
                101 polygonal velocity-inlet faces,  zone id: 17
           82247 nodes,     1 node zone  ...
    Warning: reading 4 partition grid onto 2 compute node machine.
             Combining every 2 partitions.
      Done.


    Building...
         mesh
            distributing mesh
                    parts..,
                    faces..,
                    nodes..,
                    cells..,
            bandwidth reduction using Reverse Cuthill-McKee: 11383/862 = 13.2053
         materials,
         interface,
         domains,
            mixture
         zones,
            interior--fluid
            wall
            outlet
            inlet2
            inlet1
            fluid
         parallel,
    Done.
    The following solver settings object method could also be used to execute the above command:
    <solver_session>.file.read_case(file_name = "/home/ansys/.local/share/ansys_fluent_core/examples/Static_Mixer_main.cas.h5")




.. GENERATED FROM PYTHON SOURCE LINES 45-48

Set iterations
~~~~~~~~~~~~~~
Set the number of iterations to 100.

.. GENERATED FROM PYTHON SOURCE LINES 48-51

.. code-block:: Python


    solver_session.tui.solve.set.number_of_iterations("100")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    The following solver settings object method could also be used to execute the above command:
    <solver_session>.solution.run_calculation.iter_count = 100




.. GENERATED FROM PYTHON SOURCE LINES 52-59

Create input parameters
~~~~~~~~~~~~~~~~~~~~~~~
Enable parameter creation in the TUI and then create input parameters for
the velocity and temperatures of inlets 1 and 2:
Parameter values:
Inlet1: velocity (inlet1_vel) 0.5 m/s and temperature (inlet1_temp) at 300 K
Inlet2: velocity (inlet2_vel) 0.5 m/s and temperature (inlet2_temp) at 350 K

.. GENERATED FROM PYTHON SOURCE LINES 59-78

.. code-block:: Python


    solver_session.tui.define.parameters.enable_in_TUI("yes")

    solver_session.tui.define.boundary_conditions.set.velocity_inlet(
        "inlet1", (), "vmag", "yes", "inlet1_vel", 1, "quit"
    )

    solver_session.tui.define.boundary_conditions.set.velocity_inlet(
        "inlet1", (), "temperature", "yes", "inlet1_temp", 300, "quit"
    )

    solver_session.tui.define.boundary_conditions.set.velocity_inlet(
        "inlet2", (), "vmag", "yes", "no", "inlet2_vel", 1, "quit"
    )

    solver_session.tui.define.boundary_conditions.set.velocity_inlet(
        "inlet2", (), "temperature", "yes", "no", "inlet2_temp", 350, "quit"
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    The following solver settings object method could also be used to execute the above command:
    <solver_session>.parameters.enable_in_tui = True
    The following solver settings object method could also be used to execute the above command:
    <solver_session>.setup.named_expressions["inlet1_vel"] = {"output_parameter" : False, "input_parameter" : True, "unit" : "velocity", "parametername" : "inlet1_vel", "parameterid" : "real-1", "description" : "", "definition" : "1 [m/s]", "name" : "inlet1_vel"}
    solver.setup.boundary_conditions.velocity_inlet['inlet1'] = {"momentum" : {"velocity" : {"value" : "inlet1_vel"}}}
    The following solver settings object method could also be used to execute the above command:
    <solver_session>.setup.named_expressions["inlet1_temp"] = {"output_parameter" : False, "input_parameter" : True, "unit" : "temperature", "parametername" : "inlet1_temp", "parameterid" : "real-2", "description" : "", "definition" : "300 [K]", "name" : "inlet1_temp"}
    solver.setup.boundary_conditions.velocity_inlet['inlet1'] = {"thermal" : {"t" : {"value" : "inlet1_temp"}}}
    The following solver settings object method could also be used to execute the above command:
    <solver_session>.setup.named_expressions["inlet2_vel"] = {"output_parameter" : False, "input_parameter" : True, "unit" : "velocity", "parametername" : "inlet2_vel", "parameterid" : "real-3", "description" : "", "definition" : "1 [m/s]", "name" : "inlet2_vel"}
    solver.setup.boundary_conditions.velocity_inlet['inlet2'] = {"momentum" : {"velocity" : {"value" : "inlet2_vel"}}}
    The following solver settings object method could also be used to execute the above command:
    <solver_session>.setup.named_expressions["inlet2_temp"] = {"output_parameter" : False, "input_parameter" : True, "unit" : "temperature", "parametername" : "inlet2_temp", "parameterid" : "real-4", "description" : "", "definition" : "350 [K]", "name" : "inlet2_temp"}
    solver.setup.boundary_conditions.velocity_inlet['inlet2'] = {"thermal" : {"t" : {"value" : "inlet2_temp"}}}




.. GENERATED FROM PYTHON SOURCE LINES 79-83

Create output parameters
~~~~~~~~~~~~~~~~~~~~~~~~
Create output parameters named ``outlet-temp-avg`` and ``outlet-vel-avg``
using report definitions.

.. GENERATED FROM PYTHON SOURCE LINES 83-114

.. code-block:: Python


    solver_session.solution.report_definitions.surface["outlet-temp-avg"] = {}
    solver_session.solution.report_definitions.surface["outlet-temp-avg"].report_type = (
        "surface-areaavg"
    )
    solver_session.solution.report_definitions.surface["outlet-temp-avg"].field = (
        "temperature"
    )
    solver_session.solution.report_definitions.surface["outlet-temp-avg"].surface_names = [
        "outlet"
    ]

    solver_session.solution.report_definitions.surface["outlet-vel-avg"] = {}
    solver_session.solution.report_definitions.surface["outlet-vel-avg"].report_type = (
        "surface-areaavg"
    )
    solver_session.solution.report_definitions.surface["outlet-vel-avg"].field = (
        "velocity-magnitude"
    )
    solver_session.solution.report_definitions.surface["outlet-vel-avg"].surface_names = [
        "outlet"
    ]

    solver_session.tui.define.parameters.enable_in_TUI("yes")
    solver_session.tui.define.parameters.output_parameters.create(
        "report-definition", "outlet-temp-avg"
    )
    solver_session.tui.define.parameters.output_parameters.create(
        "report-definition", "outlet-vel-avg"
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    The following solver settings object method could also be used to execute the above command:
    <solver_session>.parameters.output_parameters.report_definitions["parameter-5"] = {}
    solver.parameters.output_parameters.report_definitions['parameter-5'] = {"report_definition" : "outlet-temp-avg"}
    The following solver settings object method could also be used to execute the above command:
    <solver_session>.parameters.output_parameters.report_definitions["parameter-6"] = {}
    solver.parameters.output_parameters.report_definitions['parameter-6'] = {"report_definition" : "outlet-vel-avg"}




.. GENERATED FROM PYTHON SOURCE LINES 115-118

Enable convergence condition check
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Enable the convergence condition check.

.. GENERATED FROM PYTHON SOURCE LINES 118-121

.. code-block:: Python


    solver_session.tui.solve.monitors.residual.criterion_type("0")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Available options: (absolute none)
    The following solver settings object method could also be used to execute the above command:
    <solver_session>.solution.monitor.residual.options.criterion_type = "absolute"




.. GENERATED FROM PYTHON SOURCE LINES 122-125

Write case
~~~~~~~~~~
Write the case with all settings in place.

.. GENERATED FROM PYTHON SOURCE LINES 125-129

.. code-block:: Python


    case_path = str(Path(pyfluent.EXAMPLES_PATH) / "Static_Mixer_Parameters.cas.h5")
    solver_session.tui.file.write_case(case_path)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Writing to d64f01637b73:"/home/ansys/.local/share/ansys_fluent_core/examples/Static_Mixer_Parameters.cas.h5" in NODE0 mode and compression level 1 ...
    Grouping cells for Laplace smoothing ...
           22771 cells,     1 zone  ...
          119140 faces,     5 zones ...
           82247 nodes,     1 zone  ...
      Done.
    Done.
    The following solver settings object method could also be used to execute the above command:
    <solver_session>.file.write(file_type = "case", file_name = "/home/ansys/.local/share/ansys_fluent_core/examples/Static_Mixer_Parameters.cas.h5")




.. GENERATED FROM PYTHON SOURCE LINES 130-133

Initialize parametric study
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Initialize a parametric design point study from a Fluent session.

.. GENERATED FROM PYTHON SOURCE LINES 133-136

.. code-block:: Python


    study_1 = ParametricStudy(solver_session.parametric_studies)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Writing to d64f01637b73:"/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-Solve/Static_Mixer_main.cas.h5" in NODE0 mode and compression level 1 ...
    Grouping cells for Laplace smoothing ...
           22771 cells,     1 zone  ...
          119140 faces,     5 zones ...
           82247 nodes,     1 zone  ...
      Done.
    Done.

    Registering a case "/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-Solve/Static_Mixer_main.cas.h5" with simulation "Static_Mixer_main-Solve"...




.. GENERATED FROM PYTHON SOURCE LINES 137-140

.. image:: /_static/DP_table_011.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 142-145

Access and modify input parameters
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Access and modify the input parameters of the base design point.

.. GENERATED FROM PYTHON SOURCE LINES 145-150

.. code-block:: Python


    input_parameters_update = study_1.design_points["Base DP"].input_parameters
    input_parameters_update["inlet1_vel"] = 0.5
    study_1.design_points["Base DP"].input_parameters = input_parameters_update





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    (("inlet1_temp" . 300.) ("inlet1_vel" . 1.) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 1.) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 1.) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 1.) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 1.) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 1.) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 1.) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 1.) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 1.) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 1.) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))




.. GENERATED FROM PYTHON SOURCE LINES 151-154

Update current design point
~~~~~~~~~~~~~~~~~~~~~~~~~~~
Update the current design point.

.. GENERATED FROM PYTHON SOURCE LINES 154-157

.. code-block:: Python


    study_1.update_current_design_point()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    (("inlet1_temp" . 300.) ("inlet1_vel" . 0.5) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))

    Writing to d64f01637b73:"/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-Solve/BaseCases/Static_Mixer_main.cas.h5" in NODE0 mode and compression level 1 ...
    Grouping cells for Laplace smoothing ...
           22771 cells,     1 zone  ...
          119140 faces,     5 zones ...
           82247 nodes,     1 zone  ...
      Done.
    Done.

    Opening input/output transcript to file "/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-Solve/Base DP/Auto-generated-transcript.trn".

    -------------------------------------------------------------------------------
    ID    Hostname      Core  O.S.      PID      Vendor                          
    -------------------------------------------------------------------------------
    n0-1  d64f01637b73  2/8  Linux-64  711-712  Intel(R) Xeon(R) Platinum 8171M 
    host  d64f01637b73       Linux-64  466      Intel(R) Xeon(R) Platinum 8171M 

    MPI Option Selected: intel
    Selected system interconnect: shared-memory
    -------------------------------------------------------------------------------

    Applying input parameter values ...


      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter

     Reversed flow on 11 faces (20.3% area) of pressure-outlet 19.
         1  1.0000e+00  0.0000e+00  1.1458e-05  0.0000e+00  2.3461e-04  2.1362e-01  3.4779e+03  0:01:02   99
         2  1.0000e+00  3.3218e-02  8.9926e-02  6.6465e-02  2.6646e-04  9.1495e-01  4.8048e-01  0:00:58   98
         3  7.7357e-01  1.0759e-02  2.8622e-02  2.1529e-02  2.3543e-04  8.7582e-01  4.6383e-01  0:00:53   97
         4  5.8246e-01  5.7588e-03  1.5266e-02  9.7469e-03  2.3574e-04  8.2536e-01  4.3162e-01  0:00:50   96
         5  4.2764e-01  3.9986e-03  1.0096e-02  5.9091e-03  2.4402e-04  7.6095e-01  3.7229e-01  0:00:47   95
         6  3.1938e-01  3.2283e-03  7.4715e-03  3.8857e-03  2.3978e-04  6.6095e-01  2.8028e-01  0:00:44   94
         7  2.5608e-01  2.7466e-03  5.8022e-03  2.7437e-03  2.2222e-04  4.6276e-01  1.7269e-01  0:00:42   93
         8  2.2307e-01  2.3640e-03  4.6027e-03  2.0420e-03  1.9467e-04  2.1856e-01  8.6720e-02  0:00:40   92
         9  1.9881e-01  2.0189e-03  3.6961e-03  1.6190e-03  1.6696e-04  9.0514e-02  3.7538e-02  0:00:38   91
        10  1.7827e-01  1.7246e-03  3.0017e-03  1.3528e-03  1.4149e-04  4.4551e-02  1.5015e-02  0:00:37   90
        11  1.5896e-01  1.4798e-03  2.4389e-03  1.0878e-03  1.1821e-04  2.5687e-02  5.8461e-03  0:00:36   89

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        12  1.4127e-01  1.2831e-03  2.0023e-03  9.0516e-04  9.7798e-05  1.5457e-02  2.3237e-03  0:00:35   88
        13  1.2511e-01  1.1169e-03  1.6601e-03  7.7041e-04  8.0261e-05  9.8535e-03  9.8965e-04  0:00:34   87
        14  1.0999e-01  9.6720e-04  1.3849e-03  6.5875e-04  6.5953e-05  6.4914e-03  4.7227e-04  0:00:33   86
        15  9.5791e-02  8.3183e-04  1.1634e-03  5.5876e-04  5.4430e-05  4.5050e-03  2.6055e-04  0:00:33   85
        16  8.2848e-02  7.1231e-04  9.8349e-04  4.7569e-04  4.5252e-05  3.2598e-03  1.6494e-04  0:00:32   84
        17  7.1217e-02  6.0783e-04  8.3729e-04  4.0462e-04  3.7853e-05  2.4016e-03  1.1600e-04  0:00:32   83
        18  6.0863e-02  5.1705e-04  7.1617e-04  3.4198e-04  3.1862e-05  1.7684e-03  8.7237e-05  0:00:31   82
        19  5.1713e-02  4.3954e-04  6.1424e-04  2.8855e-04  2.7124e-05  1.2918e-03  6.8242e-05  0:00:31   81
        20  4.3933e-02  3.7491e-04  5.2799e-04  2.4330e-04  2.3306e-05  9.3811e-04  5.4389e-05  0:00:31   80
        21  3.7374e-02  3.2104e-04  4.5428e-04  2.0524e-04  2.0159e-05  6.8445e-04  4.3929e-05  0:00:30   79
        22  3.1820e-02  2.7616e-04  3.9174e-04  1.7316e-04  1.7581e-05  5.0375e-04  3.6138e-05  0:00:29   78

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        23  2.7121e-02  2.3884e-04  3.3786e-04  1.4637e-04  1.5430e-05  3.7549e-04  3.0041e-05  0:00:29   77
        24  2.3155e-02  2.0736e-04  2.9160e-04  1.2421e-04  1.3594e-05  2.8596e-04  2.5430e-05  0:00:28   76
        25  1.9824e-02  1.8066e-04  2.5204e-04  1.0587e-04  1.2002e-05  2.2241e-04  2.1838e-05  0:00:28   75
        26  1.7057e-02  1.5795e-04  2.1813e-04  9.0637e-05  1.0815e-05  1.7683e-04  1.9019e-05  0:00:28   74
        27  1.4764e-02  1.3867e-04  1.8948e-04  7.8061e-05  9.5148e-06  1.4283e-04  1.6816e-05  0:00:30   73
        28  1.2847e-02  1.2208e-04  1.6534e-04  6.7690e-05  8.3828e-06  1.1626e-04  1.4799e-05  0:00:32   72
        29  1.1255e-02  1.0759e-04  1.4491e-04  5.8806e-05  7.3741e-06  9.5692e-05  1.3378e-05  0:00:32   71
        30  9.9189e-03  9.5314e-05  1.2802e-04  5.1815e-05  6.4963e-06  7.9401e-05  1.2007e-05  0:00:33   70
        31  8.7870e-03  8.4567e-05  1.1375e-04  4.5452e-05  5.7214e-06  6.6560e-05  1.0816e-05  0:00:33   69
        32  7.8278e-03  7.5331e-05  1.0159e-04  4.0251e-05  5.0322e-06  5.6358e-05  9.8522e-06  0:00:31   68
        33  7.0130e-03  6.7340e-05  9.1204e-05  3.5880e-05  4.4234e-06  4.8250e-05  8.9386e-06  0:00:30   67

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        34  6.3018e-03  6.0333e-05  8.2192e-05  3.1990e-05  3.8805e-06  4.1718e-05  8.1198e-06  0:00:28   66
        35  5.6809e-03  5.4181e-05  7.4240e-05  2.8632e-05  3.3972e-06  3.6479e-05  7.4418e-06  0:00:27   65
        36  5.1295e-03  4.8816e-05  6.7208e-05  2.5751e-05  2.9746e-06  3.2089e-05  6.7576e-06  0:00:26   64
        37  4.6383e-03  4.4002e-05  6.0873e-05  2.3112e-05  2.6025e-06  2.8455e-05  6.1598e-06  0:00:26   63
        38  4.2006e-03  3.9762e-05  5.5165e-05  2.0835e-05  2.2776e-06  2.5360e-05  5.6306e-06  0:00:25   62
        39  3.8038e-03  3.5986e-05  5.0003e-05  1.8827e-05  1.9940e-06  2.2689e-05  5.1211e-06  0:00:24   61
        40  3.4438e-03  3.2596e-05  4.5301e-05  1.7006e-05  1.7462e-06  2.0345e-05  4.6284e-06  0:00:24   60
        41  3.1169e-03  2.9533e-05  4.1010e-05  1.5340e-05  1.5288e-06  1.8264e-05  4.1892e-06  0:00:23   59
        42  2.8210e-03  2.6772e-05  3.7111e-05  1.3859e-05  1.3391e-06  1.6387e-05  3.7657e-06  0:00:23   58
        43  2.5538e-03  2.4254e-05  3.3550e-05  1.2488e-05  1.1728e-06  1.4696e-05  3.3805e-06  0:00:22   57
        44  2.3112e-03  2.1962e-05  3.0301e-05  1.1251e-05  1.0276e-06  1.3176e-05  3.0326e-06  0:00:21   56

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        45  2.0901e-03  1.9876e-05  2.7349e-05  1.0126e-05  9.0125e-07  1.1798e-05  2.7117e-06  0:00:21   55
        46  1.8897e-03  1.7969e-05  2.4664e-05  9.1110e-06  7.9034e-07  1.0555e-05  2.4357e-06  0:00:21   54
        47  1.7074e-03  1.6244e-05  2.2235e-05  8.2007e-06  6.9386e-07  9.4455e-06  2.1800e-06  0:00:20   53
        48  1.5417e-03  1.4670e-05  2.0033e-05  7.3777e-06  6.0914e-07  8.4432e-06  1.9586e-06  0:00:20   52
        49  1.3915e-03  1.3246e-05  1.8041e-05  6.6362e-06  5.3629e-07  7.5360e-06  1.7471e-06  0:00:21   51
        50  1.2559e-03  1.1943e-05  1.6237e-05  5.9694e-06  4.7193e-07  6.7270e-06  1.5757e-06  0:00:27   50
        51  1.1326e-03  1.0776e-05  1.4614e-05  5.3652e-06  4.1642e-07  6.0014e-06  1.4138e-06  0:00:26   49
        52  1.0208e-03  9.7131e-06  1.3150e-05  4.8225e-06  3.6796e-07  5.3562e-06  1.2719e-06  0:00:25   48
        53  9.1979e-04  8.7577e-06  1.1835e-05  4.3366e-06  3.2602e-07  4.7804e-06  1.1415e-06  0:00:23   47
    !   53 solution is converged
    Connecting To Server
    Managing Previous Report Data
    Adding Data
    Performance profile written to /tmp/_d64f01637b73_277/run-information.txt
    Performance profile written to /tmp/_d64f01637b73_277/run-information.txt
    Adding Plots
    Adding Images
    Report Finished

    Writing to d64f01637b73:"/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-Solve/Base DP/Static_Mixer_main.cas.h5" in NODE0 mode and compression level 1 ...
    Grouping cells for Laplace smoothing ...
           22771 cells,     1 zone  ...
          119140 faces,     5 zones ...
           82247 nodes,     1 zone  ...
      Done.
    Done.

    Writing to d64f01637b73:"/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-Solve/Base DP/Static_Mixer_main.dat.h5" in NODE0 mode and compression level 1 ...
      Writing results.
    Done.

    Transcript closed.




.. GENERATED FROM PYTHON SOURCE LINES 158-161

Add design point
~~~~~~~~~~~~~~~~
Add a design point.

.. GENERATED FROM PYTHON SOURCE LINES 161-169

.. code-block:: Python


    design_point_1 = study_1.add_design_point()
    design_point_1_input_parameters = study_1.design_points["DP1"].input_parameters
    design_point_1_input_parameters["inlet1_temp"] = 500
    design_point_1_input_parameters["inlet1_vel"] = 1
    design_point_1_input_parameters["inlet2_vel"] = 1
    study_1.design_points["DP1"].input_parameters = design_point_1_input_parameters





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    (("inlet1_temp" . 300.) ("inlet1_vel" . 0.5) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 0.5) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 0.5) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 0.5) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 0.5) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 0.5) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 0.5) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 0.5) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 0.5) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 300.) ("inlet1_vel" . 0.5) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 500.) ("inlet1_vel" . 0.5) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))
    (("inlet1_temp" . 500.) ("inlet1_vel" . 0.5) ("inlet2_temp" . 350.) ("inlet2_vel" . 1.))




.. GENERATED FROM PYTHON SOURCE LINES 170-173

Duplicate design point
~~~~~~~~~~~~~~~~~~~~~~~
Duplicate design point 1 to create design point 2.

.. GENERATED FROM PYTHON SOURCE LINES 173-176

.. code-block:: Python


    design_point_2 = study_1.duplicate_design_point(design_point_1)








.. GENERATED FROM PYTHON SOURCE LINES 177-180

Update all design points
~~~~~~~~~~~~~~~~~~~~~~~~
Update all design points for study 1.

.. GENERATED FROM PYTHON SOURCE LINES 180-183

.. code-block:: Python


    study_1.update_all_design_points()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Opening input/output transcript to file "/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-Solve/DP1/Auto-generated-transcript.trn".
    Connecting To Server
    Managing Previous Report Data
    Adding Data
    Performance profile written to /tmp/_d64f01637b73_277/run-information.txt
    Performance profile written to /tmp/_d64f01637b73_277/run-information.txt
    Adding Plots
    Adding Images
    Report Finished

           Clearing partially read grid.

    Reading from d64f01637b73:"/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-Solve/BaseCases/Static_Mixer_main.cas.h5" in NODE0 mode ...
      Reading mesh ...
           22771 cells,     1 cell zone  ...
              22771 polyhedra cells,  zone id: 97
          119140 faces,     5 face zones ...
             114959 polygonal interior faces,  zone id: 96
               3873 polygonal wall faces,  zone id: 20
                104 polygonal pressure-outlet faces,  zone id: 19
                103 polygonal velocity-inlet faces,  zone id: 18
                101 polygonal velocity-inlet faces,  zone id: 17
           82247 nodes,     1 node zone  ...
      Done.


    Building...
         mesh
            distributing mesh
                    parts..,
                    faces..,
                    nodes..,
                    cells..,
            bandwidth reduction using Reverse Cuthill-McKee: 11383/862 = 13.2053
         materials,
         interface,
         domains,
            mixture
         zones,
            interior--fluid
            wall
            outlet
            inlet2
            inlet1
            fluid
         parallel,
    Done.

    Applying input parameter values ...


      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter

     Reversed flow on 11 faces (20.3% area) of pressure-outlet 19.
         1  1.0000e+00  1.1604e-07  1.5594e-05  1.0210e-07  1.1640e-03  2.9445e-01  3.4440e+03  0:01:00   99
         2  1.0000e+00  2.9591e-02  8.1884e-02  6.0536e-02  9.3895e-04  9.0403e-01  4.7978e-01  0:00:55   98
         3  7.8298e-01  1.0288e-02  2.8317e-02  2.0328e-02  7.6677e-04  8.5985e-01  4.6253e-01  0:00:51   97
         4  5.9709e-01  5.5247e-03  1.5297e-02  9.3098e-03  7.8042e-04  8.0504e-01  4.2981e-01  0:00:48   96
         5  4.4913e-01  4.0015e-03  1.0483e-02  5.6545e-03  8.0272e-04  7.3505e-01  3.7030e-01  0:00:44   95
         6  3.4660e-01  3.3974e-03  7.7213e-03  3.8931e-03  7.5985e-04  6.2465e-01  2.7887e-01  0:00:42   94
         7  2.9297e-01  2.9579e-03  5.9262e-03  2.8959e-03  6.7902e-04  4.1622e-01  1.7246e-01  0:00:40   93
         8  2.5763e-01  2.5403e-03  4.6438e-03  2.2532e-03  5.8707e-04  1.9014e-01  8.7145e-02  0:00:38   92
         9  2.3035e-01  2.1725e-03  3.7317e-03  1.7815e-03  5.0560e-04  8.1768e-02  3.8080e-02  0:00:37   91
        10  2.0740e-01  1.8744e-03  3.0879e-03  1.4739e-03  4.3260e-04  4.2399e-02  1.5517e-02  0:00:35   90
        11  1.8807e-01  1.6381e-03  2.5944e-03  1.2119e-03  3.6793e-04  2.5299e-02  6.2351e-03  0:00:34   89

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        12  1.7057e-01  1.4395e-03  2.1991e-03  1.0184e-03  3.1203e-04  1.5735e-02  2.6105e-03  0:00:33   88
        13  1.5375e-01  1.2682e-03  1.8815e-03  8.7979e-04  2.6542e-04  1.0189e-02  1.2059e-03  0:00:33   87
        14  1.3738e-01  1.1153e-03  1.6209e-03  7.6853e-04  2.2549e-04  6.8376e-03  6.3417e-04  0:00:32   86
        15  1.2128e-01  9.7849e-04  1.4071e-03  6.7318e-04  1.9153e-04  4.8118e-03  3.8352e-04  0:00:32   85
        16  1.0601e-01  8.5970e-04  1.2331e-03  5.8933e-04  1.6348e-04  3.5556e-03  2.6071e-04  0:00:31   84
        17  9.2573e-02  7.5636e-04  1.0869e-03  5.1091e-04  1.4029e-04  2.6940e-03  1.9167e-04  0:00:31   83
        18  8.0798e-02  6.6614e-04  9.6269e-04  4.4133e-04  1.2104e-04  2.0748e-03  1.4890e-04  0:00:31   82
        19  7.0447e-02  5.8989e-04  8.5548e-04  3.7993e-04  1.0522e-04  1.6091e-03  1.1999e-04  0:00:30   81
        20  6.1550e-02  5.2585e-04  7.6308e-04  3.2679e-04  9.2135e-05  1.2470e-03  9.9777e-05  0:00:30   80
        21  5.4119e-02  4.7084e-04  6.8219e-04  2.8342e-04  8.1760e-05  9.7274e-04  8.4825e-05  0:00:30   79
        22  4.8027e-02  4.2320e-04  6.1121e-04  2.4863e-04  7.3545e-05  7.7076e-04  7.4314e-05  0:00:29   78

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        23  4.3038e-02  3.8324e-04  5.4952e-04  2.1994e-04  6.6854e-05  6.2513e-04  6.7121e-05  0:00:29   77
        24  3.8910e-02  3.4916e-04  4.9641e-04  1.9596e-04  6.1995e-05  5.2369e-04  6.2089e-05  0:00:29   76
        25  3.5435e-02  3.1938e-04  4.5153e-04  1.7618e-04  5.7562e-05  4.5171e-04  5.7949e-05  0:00:28   75
        26  3.2512e-02  2.9295e-04  4.1370e-04  1.5931e-04  5.2335e-05  4.0004e-04  5.4531e-05  0:00:28   74
        27  3.0033e-02  2.6999e-04  3.8192e-04  1.4473e-04  4.8201e-05  3.6050e-04  5.1571e-05  0:00:27   73
        28  2.7862e-02  2.5001e-04  3.5507e-04  1.3213e-04  4.4159e-05  3.2883e-04  4.8955e-05  0:00:27   72
        29  2.6002e-02  2.3252e-04  3.3210e-04  1.2128e-04  3.9507e-05  3.0172e-04  4.6534e-05  0:00:33   71
        30  2.4347e-02  2.1711e-04  3.1161e-04  1.1201e-04  3.5352e-05  2.7794e-04  4.4130e-05  0:00:31   70
        31  2.2882e-02  2.0348e-04  2.9316e-04  1.0416e-04  3.1626e-05  2.5647e-04  4.1911e-05  0:00:29   69
        32  2.1554e-02  1.9142e-04  2.7590e-04  9.7475e-05  2.8329e-05  2.3704e-04  3.9681e-05  0:00:28   68
        33  2.0273e-02  1.8033e-04  2.5974e-04  9.0696e-05  2.5901e-05  2.1916e-04  3.7492e-05  0:00:27   67

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        34  1.9077e-02  1.7007e-04  2.4440e-04  8.4537e-05  2.3193e-05  2.0246e-04  3.5221e-05  0:00:26   66
        35  1.7949e-02  1.6032e-04  2.2970e-04  7.9250e-05  2.1198e-05  1.8681e-04  3.3172e-05  0:00:25   65
        36  1.6877e-02  1.5111e-04  2.1544e-04  7.4584e-05  1.8989e-05  1.7207e-04  3.0930e-05  0:00:24   64
        37  1.5830e-02  1.4211e-04  2.0185e-04  7.0273e-05  1.7415e-05  1.5827e-04  2.8800e-05  0:00:24   63
        38  1.4836e-02  1.3353e-04  1.8869e-04  6.6223e-05  1.5918e-05  1.4539e-04  2.6735e-05  0:00:23   62
        39  1.3895e-02  1.2534e-04  1.7610e-04  6.2420e-05  1.4509e-05  1.3338e-04  2.4791e-05  0:00:22   61
        40  1.2992e-02  1.1739e-04  1.6407e-04  5.8770e-05  1.3217e-05  1.2219e-04  2.2940e-05  0:00:22   60
        41  1.2127e-02  1.0974e-04  1.5264e-04  5.5208e-05  1.2032e-05  1.1176e-04  2.1225e-05  0:00:22   59
        42  1.1317e-02  1.0248e-04  1.4178e-04  5.1721e-05  1.0973e-05  1.0220e-04  1.9618e-05  0:00:22   58
        43  1.0554e-02  9.5559e-05  1.3156e-04  4.8351e-05  1.0029e-05  9.3401e-05  1.8105e-05  0:00:21   57
        44  9.8309e-03  8.9001e-05  1.2196e-04  4.5087e-05  9.1952e-06  8.5387e-05  1.6686e-05  0:00:21   56

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        45  9.1475e-03  8.2785e-05  1.1301e-04  4.1987e-05  8.4495e-06  7.8224e-05  1.5417e-05  0:00:21   55
        46  8.5144e-03  7.7017e-05  1.0475e-04  3.9046e-05  7.7767e-06  7.1825e-05  1.4273e-05  0:00:20   54
        47  7.9221e-03  7.1659e-05  9.7115e-05  3.6309e-05  7.1710e-06  6.6014e-05  1.3257e-05  0:00:20   53
        48  7.3716e-03  6.6690e-05  9.0038e-05  3.3764e-05  6.6476e-06  6.0750e-05  1.2247e-05  0:00:19   52
        49  6.8608e-03  6.2054e-05  8.3561e-05  3.1368e-05  6.0689e-06  5.6053e-05  1.1356e-05  0:00:19   51
        50  6.3889e-03  5.7774e-05  7.7642e-05  2.9177e-05  5.6631e-06  5.1842e-05  1.0576e-05  0:00:19   50
        51  5.9523e-03  5.3811e-05  7.2205e-05  2.7171e-05  5.1958e-06  4.8054e-05  9.8454e-06  0:00:18   49
        52  5.5507e-03  5.0132e-05  6.7225e-05  2.5312e-05  4.8678e-06  4.4658e-05  9.1751e-06  0:00:18   48
        53  5.1785e-03  4.6729e-05  6.2665e-05  2.3603e-05  4.5590e-06  4.1587e-05  8.5687e-06  0:00:17   47
        54  4.8348e-03  4.3590e-05  5.8479e-05  2.2032e-05  4.2610e-06  3.8787e-05  7.9700e-06  0:00:17   46
        55  4.5179e-03  4.0656e-05  5.4628e-05  2.0576e-05  3.9783e-06  3.6260e-05  7.4587e-06  0:00:17   45

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        56  4.2241e-03  3.7986e-05  5.1057e-05  1.9228e-05  3.7116e-06  3.3909e-05  6.9767e-06  0:00:16   44
        57  3.9516e-03  3.5478e-05  4.7738e-05  1.7982e-05  3.4567e-06  3.1752e-05  6.5540e-06  0:00:16   43
        58  3.6975e-03  3.3183e-05  4.4639e-05  1.6830e-05  3.2191e-06  2.9728e-05  6.1312e-06  0:00:16   42
        59  3.4596e-03  3.1013e-05  4.1751e-05  1.5740e-05  3.0005e-06  2.7855e-05  5.7083e-06  0:00:15   41
        60  3.2380e-03  2.8985e-05  3.9058e-05  1.4724e-05  2.7928e-06  2.6107e-05  5.3390e-06  0:00:15   40
        61  3.0300e-03  2.7108e-05  3.6532e-05  1.3784e-05  2.5994e-06  2.4461e-05  4.9958e-06  0:00:14   39
        62  2.8362e-03  2.5346e-05  3.4160e-05  1.2905e-05  2.4175e-06  2.2913e-05  4.6817e-06  0:00:14   38
        63  2.6543e-03  2.3707e-05  3.1928e-05  1.2085e-05  2.2515e-06  2.1446e-05  4.3520e-06  0:00:14   37
        64  2.4833e-03  2.2145e-05  2.9845e-05  1.1308e-05  2.0939e-06  2.0087e-05  4.0917e-06  0:00:13   36
        65  2.3223e-03  2.0728e-05  2.7886e-05  1.0591e-05  1.9490e-06  1.8778e-05  3.8140e-06  0:00:13   35
        66  2.1707e-03  1.9355e-05  2.6048e-05  9.8991e-06  1.8131e-06  1.7561e-05  3.5560e-06  0:00:13   34

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        67  2.0286e-03  1.8090e-05  2.4327e-05  9.2551e-06  1.6871e-06  1.6409e-05  3.3233e-06  0:00:13   33
        68  1.8954e-03  1.6901e-05  2.2714e-05  8.6547e-06  1.5732e-06  1.5318e-05  3.0773e-06  0:00:14   32
        69  1.7712e-03  1.5763e-05  2.1207e-05  8.0925e-06  1.4642e-06  1.4319e-05  2.8782e-06  0:00:13   31
        70  1.6549e-03  1.4733e-05  1.9792e-05  7.5561e-06  1.3637e-06  1.3360e-05  2.6847e-06  0:00:12   30
        71  1.5453e-03  1.3741e-05  1.8466e-05  7.0616e-06  1.2699e-06  1.2470e-05  2.5045e-06  0:00:12   29
        72  1.4430e-03  1.2823e-05  1.7226e-05  6.5954e-06  1.1827e-06  1.1633e-05  2.3348e-06  0:00:12   28
        73  1.3472e-03  1.1961e-05  1.6067e-05  6.1609e-06  1.1015e-06  1.0850e-05  2.1768e-06  0:00:11   27
        74  1.2575e-03  1.1159e-05  1.4984e-05  5.7534e-06  1.0259e-06  1.0118e-05  2.0292e-06  0:00:11   26
        75  1.1736e-03  1.0409e-05  1.3972e-05  5.3722e-06  9.5554e-07  9.4330e-06  1.8919e-06  0:00:10   25
        76  1.0952e-03  9.7089e-06  1.3028e-05  5.0149e-06  8.8987e-07  8.7938e-06  1.7639e-06  0:00:10   24
        77  1.0218e-03  9.0544e-06  1.2147e-05  4.6804e-06  8.2825e-07  8.1995e-06  1.6498e-06  0:00:09   23

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        78  9.5302e-04  8.4484e-06  1.1325e-05  4.3679e-06  7.7135e-07  7.6405e-06  1.5343e-06  0:00:09   22
    !   78 solution is converged
    Connecting To Server
    Managing Previous Report Data
    Adding Data
    Performance profile written to /tmp/_d64f01637b73_277/run-information.txt
    Performance profile written to /tmp/_d64f01637b73_277/run-information.txt
    Adding Plots
    Adding Images
    Report Finished

    Transcript closed.

    Opening input/output transcript to file "/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-Solve/DP2/Auto-generated-transcript.trn".

           Clearing partially read grid.

    Reading from d64f01637b73:"/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-Solve/BaseCases/Static_Mixer_main.cas.h5" in NODE0 mode ...
      Reading mesh ...
           22771 cells,     1 cell zone  ...
              22771 polyhedra cells,  zone id: 97
          119140 faces,     5 face zones ...
             114959 polygonal interior faces,  zone id: 96
               3873 polygonal wall faces,  zone id: 20
                104 polygonal pressure-outlet faces,  zone id: 19
                103 polygonal velocity-inlet faces,  zone id: 18
                101 polygonal velocity-inlet faces,  zone id: 17
           82247 nodes,     1 node zone  ...
      Done.


    Building...
         mesh
            distributing mesh
                    parts..,
                    faces..,
                    nodes..,
                    cells..,
            bandwidth reduction using Reverse Cuthill-McKee: 11383/862 = 13.2053
         materials,
         interface,
         domains,
            mixture
         zones,
            interior--fluid
            wall
            outlet
            inlet2
            inlet1
            fluid
         parallel,
    Done.

    Applying input parameter values ...


      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter

     Reversed flow on 11 faces (20.3% area) of pressure-outlet 19.
         1  1.0000e+00  1.1604e-07  1.5594e-05  1.0210e-07  1.1640e-03  2.9445e-01  3.4440e+03  0:01:04   99
         2  1.0000e+00  2.9591e-02  8.1884e-02  6.0536e-02  9.3895e-04  9.0403e-01  4.7978e-01  0:00:59   98
         3  7.8298e-01  1.0288e-02  2.8317e-02  2.0328e-02  7.6677e-04  8.5985e-01  4.6253e-01  0:00:55   97
         4  5.9709e-01  5.5247e-03  1.5297e-02  9.3098e-03  7.8042e-04  8.0504e-01  4.2981e-01  0:00:50   96
         5  4.4913e-01  4.0015e-03  1.0483e-02  5.6545e-03  8.0272e-04  7.3505e-01  3.7030e-01  0:00:47   95
         6  3.4660e-01  3.3974e-03  7.7213e-03  3.8931e-03  7.5985e-04  6.2465e-01  2.7887e-01  0:00:44   94
         7  2.9297e-01  2.9579e-03  5.9262e-03  2.8959e-03  6.7902e-04  4.1622e-01  1.7246e-01  0:00:42   93
         8  2.5763e-01  2.5403e-03  4.6438e-03  2.2532e-03  5.8707e-04  1.9014e-01  8.7145e-02  0:00:41   92
         9  2.3035e-01  2.1725e-03  3.7317e-03  1.7815e-03  5.0560e-04  8.1768e-02  3.8080e-02  0:00:39   91
        10  2.0740e-01  1.8744e-03  3.0879e-03  1.4739e-03  4.3260e-04  4.2399e-02  1.5517e-02  0:00:38   90
        11  1.8807e-01  1.6381e-03  2.5944e-03  1.2119e-03  3.6793e-04  2.5299e-02  6.2351e-03  0:00:37   89

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        12  1.7057e-01  1.4395e-03  2.1991e-03  1.0184e-03  3.1203e-04  1.5735e-02  2.6105e-03  0:00:36   88
        13  1.5375e-01  1.2682e-03  1.8815e-03  8.7979e-04  2.6542e-04  1.0189e-02  1.2059e-03  0:00:35   87
        14  1.3738e-01  1.1153e-03  1.6209e-03  7.6853e-04  2.2549e-04  6.8376e-03  6.3417e-04  0:00:34   86
        15  1.2128e-01  9.7849e-04  1.4071e-03  6.7318e-04  1.9153e-04  4.8118e-03  3.8352e-04  0:00:33   85
        16  1.0601e-01  8.5970e-04  1.2331e-03  5.8933e-04  1.6348e-04  3.5556e-03  2.6071e-04  0:00:33   84
        17  9.2573e-02  7.5636e-04  1.0869e-03  5.1091e-04  1.4029e-04  2.6940e-03  1.9167e-04  0:00:32   83
        18  8.0798e-02  6.6614e-04  9.6269e-04  4.4133e-04  1.2104e-04  2.0748e-03  1.4890e-04  0:00:32   82
        19  7.0447e-02  5.8989e-04  8.5548e-04  3.7993e-04  1.0522e-04  1.6091e-03  1.1999e-04  0:00:31   81
        20  6.1550e-02  5.2585e-04  7.6308e-04  3.2679e-04  9.2135e-05  1.2470e-03  9.9777e-05  0:00:31   80
        21  5.4119e-02  4.7084e-04  6.8219e-04  2.8342e-04  8.1760e-05  9.7274e-04  8.4825e-05  0:00:30   79
        22  4.8027e-02  4.2320e-04  6.1121e-04  2.4863e-04  7.3545e-05  7.7076e-04  7.4314e-05  0:00:30   78

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        23  4.3038e-02  3.8324e-04  5.4952e-04  2.1994e-04  6.6854e-05  6.2513e-04  6.7121e-05  0:00:29   77
        24  3.8910e-02  3.4916e-04  4.9641e-04  1.9596e-04  6.1995e-05  5.2369e-04  6.2089e-05  0:00:29   76
        25  3.5435e-02  3.1938e-04  4.5153e-04  1.7618e-04  5.7562e-05  4.5171e-04  5.7949e-05  0:00:28   75
        26  3.2512e-02  2.9295e-04  4.1370e-04  1.5931e-04  5.2335e-05  4.0004e-04  5.4531e-05  0:00:28   74
        27  3.0033e-02  2.6999e-04  3.8192e-04  1.4473e-04  4.8201e-05  3.6050e-04  5.1571e-05  0:00:27   73
        28  2.7862e-02  2.5001e-04  3.5507e-04  1.3213e-04  4.4159e-05  3.2883e-04  4.8955e-05  0:00:33   72
        29  2.6002e-02  2.3252e-04  3.3210e-04  1.2128e-04  3.9507e-05  3.0172e-04  4.6534e-05  0:00:32   71
        30  2.4347e-02  2.1711e-04  3.1161e-04  1.1201e-04  3.5352e-05  2.7794e-04  4.4130e-05  0:00:30   70
        31  2.2882e-02  2.0348e-04  2.9316e-04  1.0416e-04  3.1626e-05  2.5647e-04  4.1911e-05  0:00:29   69
        32  2.1554e-02  1.9142e-04  2.7590e-04  9.7475e-05  2.8329e-05  2.3704e-04  3.9681e-05  0:00:28   68
        33  2.0273e-02  1.8033e-04  2.5974e-04  9.0696e-05  2.5901e-05  2.1916e-04  3.7492e-05  0:00:27   67

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        34  1.9077e-02  1.7007e-04  2.4440e-04  8.4537e-05  2.3193e-05  2.0246e-04  3.5221e-05  0:00:26   66
        35  1.7949e-02  1.6032e-04  2.2970e-04  7.9250e-05  2.1198e-05  1.8681e-04  3.3172e-05  0:00:25   65
        36  1.6877e-02  1.5111e-04  2.1544e-04  7.4584e-05  1.8989e-05  1.7207e-04  3.0930e-05  0:00:25   64
        37  1.5830e-02  1.4211e-04  2.0185e-04  7.0273e-05  1.7415e-05  1.5827e-04  2.8800e-05  0:00:24   63
        38  1.4836e-02  1.3353e-04  1.8869e-04  6.6223e-05  1.5918e-05  1.4539e-04  2.6735e-05  0:00:24   62
        39  1.3895e-02  1.2534e-04  1.7610e-04  6.2420e-05  1.4509e-05  1.3338e-04  2.4791e-05  0:00:23   61
        40  1.2992e-02  1.1739e-04  1.6407e-04  5.8770e-05  1.3217e-05  1.2219e-04  2.2940e-05  0:00:23   60
        41  1.2127e-02  1.0974e-04  1.5264e-04  5.5208e-05  1.2032e-05  1.1176e-04  2.1225e-05  0:00:23   59
        42  1.1317e-02  1.0248e-04  1.4178e-04  5.1721e-05  1.0973e-05  1.0220e-04  1.9618e-05  0:00:22   58
        43  1.0554e-02  9.5559e-05  1.3156e-04  4.8351e-05  1.0029e-05  9.3401e-05  1.8105e-05  0:00:22   57
        44  9.8309e-03  8.9001e-05  1.2196e-04  4.5087e-05  9.1952e-06  8.5387e-05  1.6686e-05  0:00:21   56

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        45  9.1475e-03  8.2785e-05  1.1301e-04  4.1987e-05  8.4495e-06  7.8224e-05  1.5417e-05  0:00:21   55
        46  8.5144e-03  7.7017e-05  1.0475e-04  3.9046e-05  7.7767e-06  7.1825e-05  1.4273e-05  0:00:20   54
        47  7.9221e-03  7.1659e-05  9.7115e-05  3.6309e-05  7.1710e-06  6.6014e-05  1.3257e-05  0:00:20   53
        48  7.3716e-03  6.6690e-05  9.0038e-05  3.3764e-05  6.6476e-06  6.0750e-05  1.2247e-05  0:00:19   52
        49  6.8608e-03  6.2054e-05  8.3561e-05  3.1368e-05  6.0689e-06  5.6053e-05  1.1356e-05  0:00:19   51
        50  6.3889e-03  5.7774e-05  7.7642e-05  2.9177e-05  5.6631e-06  5.1842e-05  1.0576e-05  0:00:19   50
        51  5.9523e-03  5.3811e-05  7.2205e-05  2.7171e-05  5.1958e-06  4.8054e-05  9.8454e-06  0:00:18   49
        52  5.5507e-03  5.0132e-05  6.7225e-05  2.5312e-05  4.8678e-06  4.4658e-05  9.1751e-06  0:00:18   48
        53  5.1785e-03  4.6729e-05  6.2665e-05  2.3603e-05  4.5590e-06  4.1587e-05  8.5687e-06  0:00:17   47
        54  4.8348e-03  4.3590e-05  5.8479e-05  2.2032e-05  4.2610e-06  3.8787e-05  7.9700e-06  0:00:17   46
        55  4.5179e-03  4.0656e-05  5.4628e-05  2.0576e-05  3.9783e-06  3.6260e-05  7.4587e-06  0:00:17   45

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        56  4.2241e-03  3.7986e-05  5.1057e-05  1.9228e-05  3.7116e-06  3.3909e-05  6.9767e-06  0:00:16   44
        57  3.9516e-03  3.5478e-05  4.7738e-05  1.7982e-05  3.4567e-06  3.1752e-05  6.5540e-06  0:00:16   43
        58  3.6975e-03  3.3183e-05  4.4639e-05  1.6830e-05  3.2191e-06  2.9728e-05  6.1312e-06  0:00:15   42
        59  3.4596e-03  3.1013e-05  4.1751e-05  1.5740e-05  3.0005e-06  2.7855e-05  5.7083e-06  0:00:15   41
        60  3.2380e-03  2.8985e-05  3.9058e-05  1.4724e-05  2.7928e-06  2.6107e-05  5.3390e-06  0:00:15   40
        61  3.0300e-03  2.7108e-05  3.6532e-05  1.3784e-05  2.5994e-06  2.4461e-05  4.9958e-06  0:00:14   39
        62  2.8362e-03  2.5346e-05  3.4160e-05  1.2905e-05  2.4175e-06  2.2913e-05  4.6817e-06  0:00:14   38
        63  2.6543e-03  2.3707e-05  3.1928e-05  1.2085e-05  2.2515e-06  2.1446e-05  4.3520e-06  0:00:14   37
        64  2.4833e-03  2.2145e-05  2.9845e-05  1.1308e-05  2.0939e-06  2.0087e-05  4.0917e-06  0:00:13   36
        65  2.3223e-03  2.0728e-05  2.7886e-05  1.0591e-05  1.9490e-06  1.8778e-05  3.8140e-06  0:00:13   35
        66  2.1707e-03  1.9355e-05  2.6048e-05  9.8991e-06  1.8131e-06  1.7561e-05  3.5560e-06  0:00:12   34

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        67  2.0286e-03  1.8090e-05  2.4327e-05  9.2551e-06  1.6871e-06  1.6409e-05  3.3233e-06  0:00:12   33
        68  1.8954e-03  1.6901e-05  2.2714e-05  8.6547e-06  1.5732e-06  1.5318e-05  3.0773e-06  0:00:12   32
        69  1.7712e-03  1.5763e-05  2.1207e-05  8.0925e-06  1.4642e-06  1.4319e-05  2.8782e-06  0:00:12   31
        70  1.6549e-03  1.4733e-05  1.9792e-05  7.5561e-06  1.3637e-06  1.3360e-05  2.6847e-06  0:00:11   30
        71  1.5453e-03  1.3741e-05  1.8466e-05  7.0616e-06  1.2699e-06  1.2470e-05  2.5045e-06  0:00:11   29
        72  1.4430e-03  1.2823e-05  1.7226e-05  6.5954e-06  1.1827e-06  1.1633e-05  2.3348e-06  0:00:10   28
        73  1.3472e-03  1.1961e-05  1.6067e-05  6.1609e-06  1.1015e-06  1.0850e-05  2.1768e-06  0:00:10   27
        74  1.2575e-03  1.1159e-05  1.4984e-05  5.7534e-06  1.0259e-06  1.0118e-05  2.0292e-06  0:00:10   26
        75  1.1736e-03  1.0409e-05  1.3972e-05  5.3722e-06  9.5554e-07  9.4330e-06  1.8919e-06  0:00:09   25
        76  1.0952e-03  9.7089e-06  1.3028e-05  5.0149e-06  8.8987e-07  8.7938e-06  1.7639e-06  0:00:09   24
        77  1.0218e-03  9.0544e-06  1.2147e-05  4.6804e-06  8.2825e-07  8.1995e-06  1.6498e-06  0:00:09   23

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        78  9.5302e-04  8.4484e-06  1.1325e-05  4.3679e-06  7.7135e-07  7.6405e-06  1.5343e-06  0:00:08   22
    !   78 solution is converged
    Connecting To Server
    Managing Previous Report Data
    Adding Data
    Performance profile written to /tmp/_d64f01637b73_277/run-information.txt
    Performance profile written to /tmp/_d64f01637b73_277/run-information.txt
    Adding Plots
    Adding Images
    Report Finished

    Transcript closed.




.. GENERATED FROM PYTHON SOURCE LINES 184-187

.. image:: /_static/DP_table_012.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 189-192

Export design point table
~~~~~~~~~~~~~~~~~~~~~~~~~
Export the design point table to a CSV file.

.. GENERATED FROM PYTHON SOURCE LINES 192-198

.. code-block:: Python


    design_point_table = str(
        Path(pyfluent.EXAMPLES_PATH) / "design_point_table_study_1.csv"
    )
    study_1.export_design_table(design_point_table)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Current working directory is "/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-Solve/DP2"




.. GENERATED FROM PYTHON SOURCE LINES 199-202

Delete design point
~~~~~~~~~~~~~~~~~~~
Delete design point 1.

.. GENERATED FROM PYTHON SOURCE LINES 202-205

.. code-block:: Python


    study_1.delete_design_points([design_point_1])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Design point table exported successfully to "/home/ansys/.local/share/ansys_fluent_core/examples/design_point_table_study_1.csv" 

    The simulation report 'DP1 Report' has been deleted




.. GENERATED FROM PYTHON SOURCE LINES 206-209

Create parametric study
~~~~~~~~~~~~~~~~~~~~~~~
Create another parametric study by duplicating the current one.

.. GENERATED FROM PYTHON SOURCE LINES 209-212

.. code-block:: Python


    study_2 = study_1.duplicate()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Writing to d64f01637b73:"/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-1-Solve/Static_Mixer_main-1.cas.h5" in NODE0 mode and compression level 1 ...
    Grouping cells for Laplace smoothing ...
           22771 cells,     1 zone  ...
          119140 faces,     5 zones ...
           82247 nodes,     1 zone  ...
      Done.
    Done.

           Clearing partially read grid.

    Reading from d64f01637b73:"/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-1-Solve/Static_Mixer_main-1.cas.h5" in NODE0 mode ...
      Reading mesh ...
           22771 cells,     1 cell zone  ...
              22771 polyhedra cells,  zone id: 97
          119140 faces,     5 face zones ...
             114959 polygonal interior faces,  zone id: 96
               3873 polygonal wall faces,  zone id: 20
                104 polygonal pressure-outlet faces,  zone id: 19
                103 polygonal velocity-inlet faces,  zone id: 18
                101 polygonal velocity-inlet faces,  zone id: 17
           82247 nodes,     1 node zone  ...
      Done.


    Building...
         mesh
            distributing mesh
                    parts..,
                    faces..,
                    nodes..,
                    cells..,
            bandwidth reduction using Reverse Cuthill-McKee: 11383/862 = 13.2053
         materials,
         interface,
         domains,
            mixture
         zones,
            interior--fluid
            wall
            outlet
            inlet2
            inlet1
            fluid
         parallel,
    Done.




.. GENERATED FROM PYTHON SOURCE LINES 213-216

Rename new parametric study
~~~~~~~~~~~~~~~~~~~~~~~~~~~
Rename the newly created parametric study.

.. GENERATED FROM PYTHON SOURCE LINES 216-219

.. code-block:: Python


    study_2.rename("New Study")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Studies available [to rename]: ("Static_Mixer_main-1-Solve" "Static_Mixer_main-Solve")
    (syncdir "/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-1-Solve/Base DP")Cannot change directory to /home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-1-Solve/Base DPCannot change directory to /home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb/Static_Mixer_main-1-Solve/Base DP()




.. GENERATED FROM PYTHON SOURCE LINES 220-223

Delete old parametric study
~~~~~~~~~~~~~~~~~~~~~~~~~~~
Delete the old parametric study.

.. GENERATED FROM PYTHON SOURCE LINES 223-226

.. code-block:: Python


    study_1.delete()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Studies available [to delete]: ("Static_Mixer_main-Solve")
    Deleted the Simulation : "Static_Mixer_main-Solve"




.. GENERATED FROM PYTHON SOURCE LINES 227-230

Save parametric project and close Fluent
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Save the parametric project and close Fluent.

.. GENERATED FROM PYTHON SOURCE LINES 230-237

.. code-block:: Python


    project_filepath = str(Path(pyfluent.EXAMPLES_PATH) / "static_mixer_study.flprj")

    solver_session.tui.file.parametric_project.save_as(project_filepath)

    solver_session.exit()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Current working directory is "/home/ansys/.local/share/ansys_fluent_core/examples/project-vs3shpsz.cffdb"
    Project saved successfully at "/home/ansys/.local/share/ansys_fluent_core/examples/static_mixer_study.flprj"




.. GENERATED FROM PYTHON SOURCE LINES 238-241

Launch Fluent and read saved project
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Launch Fluent once again and read the previously saved project.

.. GENERATED FROM PYTHON SOURCE LINES 241-253

.. code-block:: Python


    solver_session = pyfluent.launch_fluent(
        precision="double", processor_count=2, mode="solver"
    )
    project_filepath_read = str(Path(pyfluent.EXAMPLES_PATH) / "static_mixer_study.flprj")

    proj = ParametricProject(
        solver_session.file.parametric_project,
        solver_session.parametric_studies,
        project_filepath_read,
    )








.. GENERATED FROM PYTHON SOURCE LINES 254-257

Save current project
~~~~~~~~~~~~~~~~~~~~
Save the current project.

.. GENERATED FROM PYTHON SOURCE LINES 257-260

.. code-block:: Python


    proj.save()








.. GENERATED FROM PYTHON SOURCE LINES 261-264

Save current project as a different project
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Save the current project as a different project.

.. GENERATED FROM PYTHON SOURCE LINES 264-270

.. code-block:: Python


    project_filepath_save_as = str(
        Path(pyfluent.EXAMPLES_PATH) / "static_mixer_study_save_as.flprj"
    )
    proj.save_as(project_filepath=project_filepath_save_as)








.. GENERATED FROM PYTHON SOURCE LINES 271-274

Export current project
~~~~~~~~~~~~~~~~~~~~~~
Export the current project.

.. GENERATED FROM PYTHON SOURCE LINES 274-280

.. code-block:: Python


    project_filepath_export = str(
        Path(pyfluent.EXAMPLES_PATH) / "static_mixer_study_export.flprj"
    )
    proj.export(project_filepath=project_filepath_export)








.. GENERATED FROM PYTHON SOURCE LINES 281-284

Archive current project
~~~~~~~~~~~~~~~~~~~~~~~
Archive the current project.

.. GENERATED FROM PYTHON SOURCE LINES 284-287

.. code-block:: Python


    proj.archive()








.. GENERATED FROM PYTHON SOURCE LINES 288-291

Close Fluent
~~~~~~~~~~~~
Close Fluent.

.. GENERATED FROM PYTHON SOURCE LINES 291-293

.. code-block:: Python


    solver_session.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (7 minutes 12.107 seconds)


.. _sphx_glr_download_examples_00-parametric_parametric_static_mixer_1.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: parametric_static_mixer_1.ipynb <parametric_static_mixer_1.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: parametric_static_mixer_1.py <parametric_static_mixer_1.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
